--- a/EcolNotebook.html
+++ b/EcolNotebook.html
@@ -309,8 +309,8 @@ $(document).ready(function () {
 </div>
 
 
-<div id="title" class="section level1">
-<h1>Title</h1>
+<div id="ecological-genomics-notebook" class="section level1">
+<h1>Ecological genomics notebook</h1>
 <div id="author-erika-bueno" class="section level2">
 <h2>Author: Erika Bueno</h2>
 <div id="affiliation-uvm" class="section level3">
@@ -425,7 +425,7 @@ $(document).ready(function () {
 
 <div id="entry-1-2020-01-13-monday." class="section level3">
 <h3>Entry 1: 2020-01-13, Monday.</h3>
-<p>##Take homes:</p>
+<p>##Info sessions on</p>
 <hr />
 <div id="id-section2"></div>
 
